<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <group android:checkableBehavior="single">


        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_action_action_search"
            
            android:orderInCategory="100"
            android:title="@string/abc_search_hint"
            app:showAsAction="always" />

        <item android:title="@string/my_profile"
            android:id="@+id/profile_id"
            android:icon="@drawable/profile"/>

        <item
            android:title="@string/money_management"
            android:id="@+id/moneymanagement_id"
            android:icon="@drawable/money"/>

        <item
            android:title="@string/items_scanned"
            android:id="@+id/scanneditems_id"
            android:icon="@drawable/scanned"/>

        <item
            android:title="@string/log_out"
            android:id="@+id/logout_id"
            android:icon="@drawable/logout"/>

        </group>
    </menu>