<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:padding="16dp"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="@drawable/header">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/navigationimage_id"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:src="@drawable/john"
        android:scaleType="centerCrop"
        android:contentDescription="@string/my_image" />

    <TextView
        android:id="@+id/navigationname_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_do"
        android:paddingTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/navigationemail_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_gmail_com"
        android:paddingTop="4dp"/>


</LinearLayout>